# leads-cli

./: .env.example  .gitignore  PUBLISHING.md  README.md  company_search_spec.json  company_search_spec_exclude_family_franchise.json  contact_search_spec.json  contact_search_spec_enrichment_run_1.json  contact_search_spec_enrichment_run_1_ops_leadership.json  contact_search_spec_enrichment_run_2.json  contact_search_spec_enrichment_run_2_ops_leadership.json  install.ps1  install.sh  pyproject.toml
NOTES/: 00-company-tool-current-state.md  01-company-tool-goal.md  02-rebuild-principles.md  03-proposed-company-architecture.md  04-search-and-qualification-design.md  05-memory-backlog-redesign.md  06-rebuild-roadmap.md  07-simplified-implementation-plan.md  08-company-enrichment-redesign.md  09-structured-exclusion-discovery.md  10-contact-discovery-and-apollo-enrichment.md  11-codebase-review-2026-06-22.md  12-publishing-onboarding-and-update-plan.md  13-publishing-implementation-contract.md  README.md
examples/: company_search_spec.json  company_search_spec_us_engineering_family_practice_small_law_20_100.json  contact_search_spec.json  contact_search_spec_enrichment_run_3_all_pm_ops_estimator.json
schemas/: company_search_spec.schema.json  contact_search_spec.schema.json
skills/company-discovery-operator/: SKILL.md
skills/company-enrichment-operator/: SKILL.md
skills/company-enrichment-operator/agents/: openai.yaml
skills/company-search-spec-writer/: SKILL.md
skills/contact-discovery-operator/: SKILL.md
skills/contact-discovery-operator/agents/: openai.yaml
skills/contact-enrichment-operator/: SKILL.md
skills/contact-search-spec-writer/: SKILL.md
skills/leads-onboarding-guide/: SKILL.md
skills/leads-update-operator/: SKILL.md
skills/leads-update-operator/agents/: openai.yaml
src/company_discovery/: __init__.py  cli.py  migrations.py  release_manifest.json  runtime.py  settings.py  skill_installer.py  update_plan.py
src/company_discovery/adapters/: __init__.py  apollo.py  exa.py  llm.py  protocols.py  website.py
src/company_discovery/bundled_skills/: __init__.py
tests/: conftest.py
tests/integration/: test_cli.py  test_contact_discovery_pipeline.py  test_enrichment_pipeline.py  test_pipeline.py  test_repository.py
tests/unit/: test_adapters.py  test_apollo.py  test_contact_discovery.py  test_enrichment_extractor.py  test_memory.py  test_normalization_hygiene.py  test_planner_evaluator.py  test_public_install_assets.py  test_schema_contract.py  test_skill_docs.py  test_spec.py  test_update_plan.py  test_workbook.py
(+53 files in other folders)
