[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "leads-cli"
version = "0.2.1"
description = "Agent-first company and contact discovery for outbound lead generation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Paolo Auletta" }]
dependencies = [
  "httpx>=0.27.2",
  "litellm>=1.83.7,<2.0.0",
  "platformdirs>=4.3.6",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.7.1",
  "questionary>=2.1.0",
  "rich>=13.9.4",
  "openpyxl>=3.1.5",
  "sqlalchemy>=2.0.38",
  "tenacity>=9.1.2,<10.0.0",
  "tldextract>=5.1.3",
  "typer>=0.15.1",
]

[tool.hatch.build]
include = [
  "README.md",
  "install.sh",
  "install.ps1",
  "src/company_discovery/**/*.py",
  "src/company_discovery/prompts/**/*.md",
  "src/company_discovery/bundled_skills/**/*.md",
  "src/company_discovery/bundled_skills/**/*.yaml",
  "src/company_discovery/**/*.json",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "twine>=5.1.1",
]

[project.scripts]
leads = "company_discovery.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/company_discovery"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["company_discovery"]

[tool.coverage.report]
show_missing = true
skip_covered = true
